Fixed the naming of children icon

--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@
 .icon-greek:before {
 	content: "\e609";
 }
-.icon-family:before {
+.icon-children:before {
 	content: "\e60a";
 }
 .icon-education:before {
