--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'fundly-icons';
-	src:url('fonts/fundly-icons.eot');
-	src:url('fonts/fundly-icons.eot?#iefix') format('embedded-opentype'),
-		url('fonts/fundly-icons.woff') format('woff'),
-		url('fonts/fundly-icons.ttf') format('truetype'),
-		url('fonts/fundly-icons.svg#fundly-icons') format('svg');
+	src:url('fonts/fundly-icons.eot?-kukh0t');
+	src:url('fonts/fundly-icons.eot?#iefix-kukh0t') format('embedded-opentype'),
+		url('fonts/fundly-icons.woff?-kukh0t') format('woff'),
+		url('fonts/fundly-icons.ttf?-kukh0t') format('truetype'),
+		url('fonts/fundly-icons.svg?-kukh0t#fundly-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -44,30 +44,36 @@
 .icon-memorial:before {
 	content: "\e606";
 }
-.icon-location:before {
+.icon-logo-knockout:before {
 	content: "\e607";
 }
-.icon-health:before {
+.icon-logo-heart:before {
 	content: "\e608";
 }
-.icon-greek:before {
+.icon-location:before {
 	content: "\e609";
 }
-.icon-children:before {
+.icon-health:before {
 	content: "\e60a";
 }
-.icon-education:before {
+.icon-greek:before {
 	content: "\e60b";
 }
-.icon-community:before {
+.icon-education:before {
 	content: "\e60c";
 }
-.icon-church:before {
+.icon-community:before {
 	content: "\e60d";
 }
-.icon-arts:before {
+.icon-church:before {
 	content: "\e60e";
 }
-.icon-animal:before {
+.icon-children:before {
 	content: "\e60f";
+}
+.icon-arts:before {
+	content: "\e610";
+}
+.icon-animal:before {
+	content: "\e611";
 }
